fix: poor display in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,7 @@
   --background: oklch(1 0 0);
   --foreground: rgb(163, 31, 36);
   --card: oklch(1 0 0);
+  --tiny-section-bg: oklch(0.96 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
@@ -84,6 +85,7 @@
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
+  --tiny-section-bg: oklch(0.269 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
